# asha-mcp

./: .gitignore  MANIFEST.in  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml
src/asha/: __init__.py  download_stockfish.sh
tests/: test_eval.py  test_mcp.py
