[project]
name = "asha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raaid Tanveer", email = "raaidraiyantanveer@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chess>=1.11.2",
    "mcp[cli]>=1.12.3",
    "pillow>=11.3.0",
    "ruff>=0.12.7",
    "stockfish>=3.28.0",
]

[project.scripts]
asha = "asha:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/asha"]
include = [
    "/src/asha/download_stockfish.sh",
    "hatch_build.py"
]
artifacts = [
    "src/asha/stockfish_bin/*"
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.hatch.build.hooks.custom]
# Optional configuration - these are the defaults
path="hatch_build.py"
target_dir = "src/asha/stockfish_bin"  # Where to store binaries in your package
force_download = false
